[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-meme-maker"
version = "1.1.0"
description = "A reusable Django app for creating and managing memes with a searchable template bank and customizable embeddable templates"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["django", "meme", "image", "generator", "reusable", "app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/LoFenk/django_meme_maker"
Documentation = "https://github.com/LoFenk/django_meme_maker#readme"
Repository = "https://github.com/LoFenk/django_meme_maker.git"
Issues = "https://github.com/LoFenk/django_meme_maker/issues"

[tool.setuptools]
packages = ["meme_maker"]
include-package-data = true

[tool.setuptools.package-data]
meme_maker = [
    "templates/**/*.html",
    "static/**/*",
    "migrations/*.py",
]

