[metadata]
name = django-meme-maker
version = 1.1.0
description = A reusable Django app for creating and managing memes with a searchable template bank
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/django-meme-maker
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Multimedia :: Graphics
keywords = django, meme, image, generator, reusable, app

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Django>=4.2
    Pillow>=9.0
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    pytest
    pytest-django
    build
    twine

[options.packages.find]
exclude =
    example_project*
    meme_maker_project*
    tests*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info,venv,migrations

[isort]
profile = django
line_length = 100
skip = migrations,venv

[tool:pytest]
DJANGO_SETTINGS_MODULE = meme_maker_project.settings
python_files = tests.py test_*.py *_tests.py

